# take-home-2026

./: .gitignore  categories.txt  diagnostics.py  extractor.py  main.py  models.py  parser.py  pyproject.toml  server.py  taxonomy.py
data/: README.md
data/validation-data/: README.md  aesop.html  allbirds.html  amazon.html  apple.html  away.html  bearaby.html  bombas.html  bose.html  brooklinen.html  casper.html  decathlon.html  dr_bronner.html  everlane.html  fitbit.html  gap.html  glossier.html  ikea.html  mejuri.html  nordstrom.html  outdoor_voices.html  ruggable.html  sonos.html  stanley.html  staub.html  target.html  uniqlo.html  walmart.html  wayfair.html  yeti.html
frontend/app/: layout.tsx  page.tsx
frontend/app/products/[slug]/: page.tsx
frontend/components/: image-gallery.tsx  product-card-image.tsx  product-card.tsx  product-detail-content.tsx  variant-table.tsx
frontend/lib/: api.ts
